--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,7 +5,7 @@ authors = ["Kevin Donahue <nonnontrivial@gmail.com>"]
 edition = "2018"
 readme = "README.md"
 description = "generate markdown tables from type script interfaces"
-keywords = []
+keywords = ["cli"]
 license = "MIT"
 repository = "https://github.com/nonnontrivial/blubber.git"
 categories = ["command-line-utilities"]
