--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,7 +4,7 @@ version = "0.1.1"
 authors = ["Kevin Donahue <nonnontrivial@gmail.com>"]
 edition = "2018"
 readme = "README.md"
-description = "generate markdown tables from type script interfaces"
+description = "generate markdown tables from type script files"
 keywords = ["cli"]
 license = "MIT"
 repository = "https://github.com/nonnontrivial/blubber.git"
